[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Malachi Gruenhagen <68450431+nurse-the-code@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.8"
urllib3 = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

